[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["rayanht <rayan.hatout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.12"
ecdsa = "^0.18.0"
web3 = "^6.6.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
