[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["rayanht <rayan.hatout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
fastapi = "^0.100.0"
web3 = "^6.6.1"
firedantic = "^0.3.0"
google-cloud-firestore = "^2.11.1"
uvicorn = "^0.23.1"
gunicorn = "^21.2.0"
airstack = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
